--- a/Sprint0/Task1.ipynb
+++ b/Sprint0/Task1.ipynb
@@ -63,7 +63,16 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "// Создание класса\n",
+    "class Vehicle\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "\n",
+    "// Основная программа\n",
+    "Vehicle Car = new Vehicle(); // Создание объекта"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,7 +98,14 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Animal cat = new Animal();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,7 +163,29 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    private string color; // Приватное поле\n",
+    "\n",
+    "    public string Color // Свойство с геттером и сеттером\n",
+    "    {\n",
+    "        get { return color; }\n",
+    "        set { color = value; }\n",
+    "    }\n",
+    "\n",
+    "    public void StartEngine() // Публичный метод\n",
+    "    {\n",
+    "        Console.WriteLine(\"Запустить двигатель...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Основная программа\n",
+    "Vehicle Car = new Vehicle(); // Создание объекта\n",
+    "Car.Color = \"Красный\";\n",
+    "Car.StartEngine();\n",
+    "Console.WriteLine(Car.Color);\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,7 +210,27 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class animal\n",
+    "{\n",
+    "    private string name;\n",
+    "\n",
+    "    public string Name\n",
+    "    {\n",
+    "        get{ return name; }\n",
+    "        set { name = value;} \n",
+    "    }\n",
+    "\n",
+    "    public void Greeting() //\n",
+    "    {\n",
+    "        Console.WriteLine($\"Этого животного зовут {Name}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "animal Cat = new animal();\n",
+    "Cat.Name = \"Вася\";\n",
+    "Cat.Greeting();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,7 +297,38 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    private string color; // Приватное поле\n",
+    "\n",
+    "    public string Color // Свойство с геттером и сеттером\n",
+    "    {\n",
+    "        get { return color; }\n",
+    "        set { color = value; }\n",
+    "    }\n",
+    "    public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Поехали...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Car : Vehicle\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Vehicle myVehicle = new Vehicle(); // Создание объекта myVehicle\n",
+    "Car myCar = new Car(); // Создание объекта myCar\n",
+    "\n",
+    "myCar.Color = \"Красный\";\n",
+    "Console.WriteLine(myCar.Color);\n",
+    "myCar.Move();\n",
+    "\n",
+    "myVehicle.Color = \"Синий\";\n",
+    "Console.WriteLine(myVehicle.Color);\n",
+    "myVehicle.Move();\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,7 +353,40 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class animal\n",
+    "{\n",
+    "    private string name;\n",
+    "\n",
+    "    public string Name\n",
+    "    {\n",
+    "        get{ return name; }\n",
+    "        set { name = value;} \n",
+    "    }\n",
+    "\n",
+    "    public void Greeting() //\n",
+    "    {\n",
+    "        Console.WriteLine($\"Этого животного зовут {Name}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class pet : animal\n",
+    "{\n",
+    "     public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Еще это животное живет с человеком!\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "animal Cat = new animal();\n",
+    "Cat.Name = \"Вася\";\n",
+    "Cat.Greeting();\n",
+    "\n",
+    "pet Dog = new pet();\n",
+    "Dog.Name = \"Тимоша\";\n",
+    "Dog.Greeting();\n",
+    "Dog.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -323,7 +445,31 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    public virtual void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Транспорт двигается\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Car : Vehicle\n",
+    "{\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        //base.Move(); // Вызов метода базового класса\n",
+    "        Console.WriteLine(\"Автомобиль двигается\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Vehicle myVehicle = new Vehicle(); // Создание объекта myVehicle\n",
+    "Car myCar = new Car(); // Создание объекта myCar\n",
+    "\n",
+    "\n",
+    "myVehicle.Move();\n",
+    "myCar.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -338,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -348,7 +494,44 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class animal\n",
+    "{\n",
+    "    private string name;\n",
+    "\n",
+    "    public string Name\n",
+    "    {\n",
+    "        get{ return name; }\n",
+    "        set { name = value;} \n",
+    "    }\n",
+    "\n",
+    "    public virtual void Greeting() //\n",
+    "    {\n",
+    "        Console.WriteLine($\"Этого животного зовут {Name}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class pet : animal\n",
+    "{\n",
+    "    public override void Greeting()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Этого члена семьи зовут {Name}\");\n",
+    "    }\n",
+    "     public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Еще это животное живет с человеком!\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "animal Cat = new animal();\n",
+    "Cat.Name = \"Вася\";\n",
+    "Cat.Greeting();\n",
+    "\n",
+    "pet Dog = new pet();\n",
+    "Dog.Name = \"Тимоша\";\n",
+    "Dog.Greeting();\n",
+    "Dog.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -407,7 +590,30 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "abstract class Car\n",
+    "{\n",
+    "    public abstract void ChargeBattery();\n",
+    "\n",
+    "    public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Поехали...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class ElectricCar : Car\n",
+    "{\n",
+    "    public override void ChargeBattery()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Батарея заряжена...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "ElectricCar myElectricCar = new ElectricCar(); // Создание объекта myElectricCar\n",
+    "\n",
+    "myElectricCar.ChargeBattery();\n",
+    "myElectricCar.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -422,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -432,7 +638,37 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "abstract class animal\n",
+    "{\n",
+    "    private string name;\n",
+    "\n",
+    "    public string Name\n",
+    "    {\n",
+    "        get{ return name; }\n",
+    "        set { name = value;} \n",
+    "    }\n",
+    "\n",
+    "    public abstract void Greeting();\n",
+    "}\n",
+    "\n",
+    "class pet : animal\n",
+    "{\n",
+    "    public override void Greeting()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Этого члена семьи зовут {Name}\");\n",
+    "    }\n",
+    "     public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Еще это животное живет с человеком!\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "pet Dog = new pet();\n",
+    "Dog.Name = \"Тимоша\";\n",
+    "Dog.Greeting();\n",
+    "Dog.Move()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -496,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -506,7 +742,40 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "using System;\n",
+    "\n",
+    "public class Engine\n",
+    "{\n",
+    "    public void Start() => Console.WriteLine(\"Двигатель стартовал\");\n",
+    "    public void Stop() => Console.WriteLine(\"Двигатель остановлен\");\n",
+    "}\n",
+    "\n",
+    "public class Car\n",
+    "{\n",
+    "    private Engine engine;\n",
+    "\n",
+    "    public Car(Engine engine)\n",
+    "    {\n",
+    "        this.engine = engine;\n",
+    "    }\n",
+    "\n",
+    "    public void Drive()\n",
+    "    {\n",
+    "        engine.Start();\n",
+    "\n",
+    "        // Дополнительная логика для движения автомобиля\n",
+    "        Console.WriteLine(\"Автомобиль двигается\");\n",
+    "\n",
+    "        engine.Stop();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Engine myEngine = new Engine(); // Создание объекта myEngine\n",
+    "Car myAuto = new Car(myEngine); // Создание объекта myAuto\n",
+    "\n",
+    "myAuto.Drive(); // Автомобиль начинает движение, используя двигатель"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -521,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -531,7 +800,36 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "using System;\n",
+    "\n",
+    "public class Animal \n",
+    "{ \n",
+    "    private Brain brain; // Объявление переменной типа Brain\n",
+    "\n",
+    "    public Animal() // Конструктор класса Animal\n",
+    "    {\n",
+    "        brain = new Brain(); // Инициализация brain\n",
+    "    }\n",
+    "\n",
+    "    public void Think() \n",
+    "    { \n",
+    "        brain.Think(); \n",
+    "    } \n",
+    "\n",
+    "    private class Brain \n",
+    "    { \n",
+    "        public void Think() \n",
+    "        { \n",
+    "            Console.WriteLine(\"МЯУ\"); \n",
+    "        } \n",
+    "    } \n",
+    "} \n",
+    "\n",
+    "\n",
+    " Animal Cat = new Animal(); \n",
+    "Cat.Think(); // Вывод: МЯУ"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -634,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -644,7 +942,51 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "using System;\n",
+    "\n",
+    "abstract class Vehicle\n",
+    "{\n",
+    "    public abstract void Drive();\n",
+    "}\n",
+    "\n",
+    "class Car : Vehicle\n",
+    "{\n",
+    "    private Driver driver;\n",
+    "\n",
+    "    public Car(Driver driver)\n",
+    "    {\n",
+    "        this.driver = driver;\n",
+    "    }\n",
+    "\n",
+    "    public override void Drive()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Автомобиль движется...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Driver\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "\n",
+    "    public Driver(string name)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public void Drive(Vehicle vehicle)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} управляет траспортом...\");\n",
+    "        vehicle.Drive();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "    Driver Igor = new Driver(\"Игорь\");\n",
+    "    Car myCar = new Car(Igor); // Создаем автомобиль с водителем\n",
+    "\n",
+    "    myCar.Drive(); // Автомобиль начинает движение\n",
+    "    Igor.Drive(myCar); // Водитель также может начать движение, используя автомобиль"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -659,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -669,7 +1011,60 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "using System;\n",
+    "\n",
+    "abstract class Animal\n",
+    "{\n",
+    "    public abstract void MakeSound();\n",
+    "}\n",
+    "\n",
+    "class Dog : Animal\n",
+    "{\n",
+    "    private Owner owner;\n",
+    "\n",
+    "    public Dog(Owner owner)\n",
+    "    {\n",
+    "        this.owner = owner;\n",
+    "    }\n",
+    "\n",
+    "    public override void MakeSound()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Гавв\");\n",
+    "    }\n",
+    "\n",
+    "    public void Walk()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{owner.Name} выгуливает Тимошу\");\n",
+    "        MakeSound();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Owner\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "\n",
+    "    public Owner(string name)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public void Feed(Animal animal)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} кормит Тимошу\");\n",
+    "        animal.MakeSound();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "Owner NASTYA = new Owner(\"Настя\");\n",
+    "Dog myDog = new Dog(NASTYA); // Создаем собаку с владельцем\n",
+    "\n",
+    "myDog.MakeSound(); // Собака издает звук\n",
+    "NASTYA.Feed(myDog); // Владелец кормит собаку\n",
+    "myDog.Walk(); // Владелец выгуливает собаку\n"
+   ]
   }
  ],
  "metadata": {
