--- a/Sprint0/Task0.ipynb
+++ b/Sprint0/Task0.ipynb
@@ -135,16 +135,7 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Минимальное значение: 1\n",
-      "Максимальное значение: 9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "int[] numbers = { 5, 8, 1, 3, 9, 6, 7, 2 };\n",
     "\n",
@@ -157,17 +148,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Сумма всех элементов: 41\r\n"
-     ]
+   "execution_count": 3,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "int sum = numbers.Sum();\n",
     "Console.WriteLine($\"Сумма всех элементов: {sum}\");"
@@ -175,17 +165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Среднее арифметическое: 5,125\r\n"
-     ]
+   "execution_count": 4,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "double average = numbers.Average();\n",
     "Console.WriteLine($\"Среднее арифметическое: {average}\");"
@@ -193,17 +182,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Отсортированный массив: 1, 2, 3, 5, 6, 7, 8, 9\r\n"
-     ]
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "Array.Sort(numbers);\n",
     "Console.WriteLine(\"Отсортированный массив: \" + string.Join(\", \", numbers));"
@@ -211,17 +199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Массив не содержит число 0\r\n"
-     ]
+   "execution_count": 6,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "int numberToFind = 0;\n",
     "bool containsNumber = numbers.Contains(numberToFind);\n",
