--- a/Sprint0/Task3.ipynb
+++ b/Sprint0/Task3.ipynb
@@ -127,7 +127,7 @@
     "\n",
     "var documentary = new Documentary { Title = \"Зарождение Земли\", Director = \"NASA\", ReleaseYear = 2021, Theme = \"Наука\" };\n",
     "var featureFilm = new FeatureFilm { Title = \"Война миров Z\", Director = \"Марк Форстер\", ReleaseYear = 2013, Genre = \"приключения, боевик, ужасы, фантастика\" };\n",
-    "var animatedMovie = new AnimatedMovie { Title = \"Головоломка 2\", Director = \"Келс Манн\", ReleaseYear = 2024, AnimationStudio = \"Pixar\" };\n",
+    "var animatedMovie = new AnimatedMovie { Title = \"Головоломvка 2\", Director = \"Келс Манн\", ReleaseYear = 2024, AnimationStudio = \"Pixar\" };\n",
     "\n",
     "        // Вызываем методы для каждого типа фильма\n",
     "\n",
