--- a/Sprint1/Task0.ipynb
+++ b/Sprint1/Task0.ipynb
@@ -234,8 +234,90 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "животное создано!\n",
+      "Имя: Феликс, Порода: мейнкун\n",
+      "Уровень счастья: 0\n",
+      "Уровень счастья увеличен на 20. Текущий уровень: 20\n",
+      "Всего животных: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal //Родительский класс\n",
+    "{\n",
+    "    public string Name { get; set; } //АТРИБУТЫ \n",
+    "    public string Breed { get; set; } // порода\n",
+    "    public static int TotalAnimals { get; private set; } // атрибут счетчика\n",
+    "\n",
+    "    public Animal(string name, string breed) \n",
+    "    {\n",
+    "        Name = name;\n",
+    "        Breed = breed;\n",
+    "        TotalAnimals++;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Имя: {Name}, Порода: {Breed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public interface ISpeakable // животное обязательно должно сказать свой уровень счастья юноу\n",
+    "{\n",
+    "    string Speak();\n",
+    "}\n",
+    "\n",
+    "public class HappyAnimal : Animal, ISpeakable //НАСЛЕДОВАНИЕ \n",
+    "{\n",
+    "    private int happinessLevel; //хранение уровня счастья <3\n",
+    "\n",
+    "    public HappyAnimal(string name, string breed) : base(name, breed) // КОНСТРУКТОР теперь ПРИНИМАЕТт имя, породу и  ПЕРЕДАЕТ их родительскому конструктору Animal\n",
+    "    {\n",
+    "        happinessLevel = 0; // Начальный уровень счастья\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Уровень счастья: {happinessLevel}\");\n",
+    "    }\n",
+    "\n",
+    "    public void IncreaseHappiness(int amount) // МЕТОД увеличивает уровень счастья на заданную сумму\n",
+    "    {\n",
+    "        happinessLevel += amount;\n",
+    "        Console.WriteLine($\"Уровень счастья увеличен на {amount}. Текущий уровень: {happinessLevel}\");\n",
+    "    }\n",
+    "\n",
+    "    public string Speak() //вот тут животное говорить уровень тот\n",
+    "    {\n",
+    "        return $\"Я счастлив! Мой уровень счастья: {happinessLevel}\";\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "// создание нью животного\n",
+    "\n",
+    "HappyAnimal cat = new HappyAnimal(\"Феликс\", \"мейнкун\");\n",
+    "Console.WriteLine(\"животное создано!\");\n",
+    "\n",
+    "// вывод информации \n",
+    "\n",
+    " cat.DisplayInfo();\n",
+    "\n",
+    "// увеличение уровня счастья\n",
+    "\n",
+    "cat.IncreaseHappiness(20);\n",
+    "\n",
+    "Console.WriteLine($\"Всего животных: {Animal.TotalAnimals}\");\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
