--- a/Sprint1/Task0.ipynb
+++ b/Sprint1/Task0.ipynb
@@ -274,7 +274,7 @@
     "\n",
     "public class HappyAnimal : Animal, ISpeakable //НАСЛЕДОВАНИЕ \n",
     "{\n",
-    "    private int happinessLevel; //хранение уровня счастья <3\n",
+    "    private int happinessLevel; //хранение уровня счастьяz <3\n",
     "\n",
     "    public HappyAnimal(string name, string breed) : base(name, breed) // КОНСТРУКТОР теперь ПРИНИМАЕТт имя, породу и  ПЕРЕДАЕТ их родительскому конструктору Animal\n",
     "    {\n",
