--- a/Sprint1/Task1.ipynb
+++ b/Sprint1/Task1.ipynb
@@ -32,18 +32,18 @@
     "```csharp\n",
     "public class Vehicle\n",
     "{\n",
-    "    private string _color;\n",
-    "    private int _speed;\n",
+    "    private string _color; //поле цвета\n",
+    "    private int _speed; // поле скорости \n",
     "\n",
     "    // Свойство Color с геттером и сеттером\n",
-    "    public string Color\n",
+    "    public string Color // чтение и изменение цвета\n",
     "    {\n",
-    "        get { return _color; }\n",
-    "        set { _color = value; }\n",
+    "        get { return _color; } // возврат значения\n",
+    "        set { _color = value; } // установка нового значения\n",
     "    }\n",
     "\n",
     "    // Свойство Speed с геттером и сеттером\n",
-    "    public int Speed\n",
+    "    public int Speed // читает скорость и устанавливает плюс значения. \n",
     "    {\n",
     "        get { return _speed; }\n",
     "        set\n",
@@ -56,22 +56,22 @@
     "    }\n",
     "\n",
     "    // Статический атрибут\n",
-    "    public static int TotalVehicles { get; private set; } = 0;\n",
+    "    public static int TotalVehicles { get; private set; } = 0; //??\n",
     "\n",
     "    // Конструктор\n",
     "    public Vehicle()\n",
     "    {\n",
-    "        TotalVehicles++;\n",
+    "        TotalVehicles++; //увеличивает \n",
     "    }\n",
     "\n",
     "    // Обычный метод\n",
-    "    public void Accelerate(int delta)\n",
+    "    public void Accelerate(int delta) //увеличивает скорость на заданное значение\n",
     "    {\n",
     "        Speed += delta;\n",
     "    }\n",
     "\n",
     "    // Статический метод\n",
-    "    public static void DisplayTotalVehicles()\n",
+    "    public static void DisplayTotalVehicles() //выводит общее число\n",
     "    {\n",
     "        Console.WriteLine($\"Общее количество транспортных средств: {TotalVehicles}\");\n",
     "    }\n",
@@ -81,24 +81,24 @@
     "#### Класс Car\n",
     "\n",
     "```csharp\n",
-    "public class Car : Vehicle\n",
+    "public class Car : Vehicle // наследуется от Vehicle и добавляет дополнительную функциональность\n",
     "{\n",
-    "    private int _fuelLevel;\n",
+    "    private int _fuelLevel; //хранит уровень топлива  \n",
     "\n",
     "    // Свойство FuelLevel с геттером и сеттером\n",
-    "    public int FuelLevel\n",
+    "    public int FuelLevel //читает и изменяет уровень топлива \n",
     "    {\n",
     "        get { return _fuelLevel; }\n",
     "        set { _fuelLevel = value; }\n",
     "    }\n",
     "\n",
-    "    // Конструктор\n",
-    "    public Car() : base()\n",
+    "    // Конструктор вызывает конструктор базового класса с помощью : base()\n",
+    "    public Car() : base() \n",
     "    {\n",
     "        FuelLevel = 100; // Задаем начальный уровень топлива\n",
     "    }\n",
     "\n",
-    "    // Обычный метод\n",
+    "    // Обычный метод увеличивает уровень топлива на заданное значение\n",
     "    public void Refuel(int amount)\n",
     "    {\n",
     "        FuelLevel += amount;\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -136,8 +136,100 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "Specified argument was out of the range of valid values. (Parameter 'Скорость не может быть отрицательной!')\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    private string _color;                  //поле цвета\n",
+    "    private int _speed;                     // поле скорости \n",
+    "\n",
+    "    // Свойство Color с геттером и сеттером\n",
+    "    public string Color                     // чтение и изменение цвета\n",
+    "    {\n",
+    "        get { return _color; }              // возврат значения\n",
+    "        set { _color = value; }             // установка нового значения\n",
+    "    }\n",
+    "\n",
+    "    // Свойство Speed с геттером и сеттером\n",
+    "    public int Speed // читает скорость и устанавливает плюс значения. \n",
+    "    {\n",
+    "        get { return _speed; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value >= 0)\n",
+    "                _speed = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"Скорость не может быть отрицательной!\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // Статический атрибут\n",
+    "    public static int TotalVehicles { get; private set; } = 0; //??\n",
+    "\n",
+    "    // Конструктор \n",
+    "    public Vehicle()\n",
+    "    {\n",
+    "        TotalVehicles++; //увеличивает \n",
+    "    }\n",
+    "\n",
+    "    // Обычный метод\n",
+    "    public void Accelerate(int delta) //увеличивает скорость на заданное значение\n",
+    "    {\n",
+    "        Speed += delta;\n",
+    "    }\n",
+    "\n",
+    "    // Статический метод\n",
+    "    public static void DisplayTotalVehicles() //выводит общее число\n",
+    "    {\n",
+    "        Console.WriteLine($\"Общее количество транспортных средств: {TotalVehicles}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle // наследуется от Vehicle и добавляет дополнительную функциональность\n",
+    "{\n",
+    "    private int _fuelLevel; //хранит уровень топлива  \n",
+    "\n",
+    "    // Свойство FuelLevel с геттером и сеттером\n",
+    "    public int FuelLevel //читает и изменяет уровень топлива \n",
+    "    {\n",
+    "        get { return _fuelLevel; }\n",
+    "        set { _fuelLevel = value; }\n",
+    "    }\n",
+    "\n",
+    "    // Конструктор вызывает конструктор базового класса с помощью : base()\n",
+    "    public Car() : base() \n",
+    "    {\n",
+    "        FuelLevel = 100; // Задаем начальный уровень топлива\n",
+    "    }\n",
+    "\n",
+    "    // Обычный метод увеличивает уровень топлива на заданное значение\n",
+    "    public void Refuel(int amount)\n",
+    "    {\n",
+    "        FuelLevel += amount;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Car myCar = new Car();\n",
+    "Console.WriteLine(myCar.FuelLevel); // Вызов геттера\n",
+    "myCar.FuelLevel = 80; // Вызов простого сеттера\n",
+    "try\n",
+    "{\n",
+    "    myCar.Speed = -20; // Вызов сеттера с проверкой\n",
+    "}\n",
+    "catch (ArgumentOutOfRangeException ex)\n",
+    "{\n",
+    "    Console.WriteLine(ex.Message);\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -161,8 +253,90 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "10\n",
+      "-20\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    private string _name;                  //ИМЯ\n",
+    "    private int _happy;                    //УРОВЕНЬ СЧАСТЬЯ \n",
+    "\n",
+    "    public string Name                     // чтение и изменение имени\n",
+    "    {\n",
+    "        get { return _name; }              // возврат значения\n",
+    "        set { _name = value; }             // установка нового значения\n",
+    "    }\n",
+    "\n",
+    "    public int Happy                       // читает уровнь счастья и устанавливает плюсик \n",
+    "    {\n",
+    "        get { return _happy; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value >= 0)\n",
+    "                _happy = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"Не обижай животное!\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public static int TotalAnimal { get; private set; } = 0; //??\n",
+    "\n",
+    "    // Конструктор \n",
+    "    public Animal()\n",
+    "    {\n",
+    "        TotalAnimal++; //увеличивает \n",
+    "    }\n",
+    "\n",
+    "    // Обычный метод\n",
+    "    public void Accelerate(int delta) //увеличивает скорость на заданное значение\n",
+    "    {\n",
+    "        Happy += delta;\n",
+    "    }\n",
+    "\n",
+    "    // Статический метод\n",
+    "    public static void DisplayTotalAnimal() //выводит общее число\n",
+    "    {\n",
+    "        Console.WriteLine($\"Общее количество животных: {TotalAnimal}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal // наследуется от Animal и добавляет дополнительную функциональность\n",
+    "{\n",
+    "    private int _bone; //хранит косточки = ее уровень счастья <3  \n",
+    "\n",
+    "    public int Bone //читает и изменяет \n",
+    "    {\n",
+    "        get { return _bone; }\n",
+    "        set { _bone = value; }\n",
+    "    }\n",
+    "\n",
+    "    // Конструктор вызывает конструктор базового класса с помощью : base()\n",
+    "    public Dog() : base() \n",
+    "    {\n",
+    "        Bone = 0; // Задаем начальный уровень \n",
+    "    }\n",
+    "\n",
+    "    // Обычный метод увеличивает уровень на заданное значение\n",
+    "    public void Refuel(int amount)\n",
+    "    {\n",
+    "        Bone += amount;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Dog myDog = new Dog();\n",
+    "Console.WriteLine(myDog.Bone);\n",
+    "myDog.Bone = 10; \n",
+    "Console.WriteLine(myDog.Bone);\n"
+   ]
   }
  ],
  "metadata": {
