--- a/Sprint1/Task2.ipynb
+++ b/Sprint1/Task2.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -110,8 +110,52 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    public string Color { get; set; } // public свойство\n",
+    "    public int speed; // private поле\n",
+    "\n",
+    "    protected void SetSpeed(int value) // protected метод\n",
+    "    {\n",
+    "        speed = value;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public int fuelLevel; // private поле\n",
+    "\n",
+    "    public void Refuel(int amount) // public метод\n",
+    "    {\n",
+    "        fuelLevel += amount;\n",
+    "    }\n",
+    "\n",
+    "    protected void CheckSpeedLimit() // protected метод\n",
+    "    {\n",
+    "        if (speed > 120)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Превышен скоростной режим!\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Car MyCar = new Car();\n",
+    "MyCar.Color = \"Red\";\n",
+    "MyCar.Refuel(100); \n",
+    "\n",
+    "Console.WriteLine(MyCar.fuelLevel);\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -135,8 +179,114 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Котик Феликс породы Мейн-Кун счастлив на 50 %\n",
+      " Собачка Тимоша грустит! Не будь плохим хозяином! Порадуй с помощью команды HappyLevelDog \n",
+      " Всего animals 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    private static int count;\n",
+    "\n",
+    "    public string Name { get; set; } // public свойство\n",
+    "    protected int happy; // private поле\n",
+    "    \n",
+    "    public Animal(string name)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "        count++;\n",
+    "    }\n",
+    "     public static int CheckAnimals()\n",
+    "     {\n",
+    "        return count;\n",
+    "     }\n",
+    "\n",
+    "    protected void SetHappy(int value) // protected метод\n",
+    "    {\n",
+    "        happy = value;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "\n",
+    "    public string Breed{get; set;}\n",
+    "    private int HappyCat{get; set;}\n",
+    "\n",
+    "    public Cat(string name, string breed) : base(name)\n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "        HappyCat = 0;\n",
+    "    }\n",
+    "\n",
+    "    public void HappyLevelCat(int amount) // public метод\n",
+    "    {\n",
+    "        HappyCat += amount;\n",
+    "    }\n",
+    "\n",
+    "    public void CheckHappyCat()\n",
+    "    {\n",
+    "        if (HappyCat > 0)\n",
+    "        {\n",
+    "            Console.WriteLine($\" Котик {Name} породы {Breed} счастлив на {HappyCat} %\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\" Котик {Name} грустит! Не будь плохим хозяином! Порадуй с помощью команды HappyLevelCat \");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class  Dog : Animal\n",
+    "{\n",
+    "\n",
+    "    public string Breed{get; set;}\n",
+    "    private int HappyDog{get; set;}\n",
+    "\n",
+    "    public Dog(string name, string breed) : base(name)\n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "        HappyDog = 0;\n",
+    "    }\n",
+    "\n",
+    "    public void HappyLevelDog(int amount) // public метод\n",
+    "    {\n",
+    "        HappyDog += amount;\n",
+    "    }\n",
+    "\n",
+    "    public void CheckHappyDog()\n",
+    "    {\n",
+    "        if (HappyDog > 0)\n",
+    "        {\n",
+    "            Console.WriteLine($\" Собачка {Name} породы {Breed} счастлива на {HappyDog} %\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\" Собачка {Name} грустит! Не будь плохим хозяином! Порадуй с помощью команды HappyLevelDog \");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Cat myCat = new Cat(\"Феликс\", \"Мейн-Кун\");\n",
+    "myCat.HappyLevelCat(50);\n",
+    "myCat.CheckHappyCat();\n",
+    "\n",
+    "Dog myDog = new Dog(\"Тимоша\", \"Чихуахуа\");\n",
+    "myDog.HappyLevelDog(0);\n",
+    "myDog.CheckHappyDog();\n",
+    "\n",
+    "Console.WriteLine($\" Всего animals {Animal.CheckAnimals()}\");\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
