--- a/Sprint0/Task3.ipynb
+++ b/Sprint0/Task3.ipynb
@@ -71,14 +71,43 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Фильм: Зарождение Земли, Режиссер: NASA, Год выпуска: 2021\n",
+      "Зарождение Земли был просмотрен\n",
+      "Тема фильма: Наука\n",
+      "Рейтинг фильма Зарождение Земли: 10/10\n",
+      "\n",
+      "Фильм: Война миров Z, Режиссер: Марк Форстер, Год выпуска: 2013\n",
+      "Война миров Z был просмотрен\n",
+      "Рейтинг фильма Война миров Z: 7/10\n",
+      "Жанр фильма: приключения, боевик, ужасы, фантастика\n",
+      "\n",
+      "Фильм: Головоломvка 2, Режиссер: Келс Манн, Год выпуска: 2024\n",
+      "Студия анимации: Pixar\n",
+      "Головоломvка 2 был просмотрен\n",
+      "Рейтинг фильма Головоломvка 2: 9/10\n"
+     ]
+    }
+   ],
    "source": [
-    "public class Movie\n",
+    "//Полиморфизм - это способность объектов одного класса представлять объекты других классов,\n",
+    "///которые имеют общий базовый класс или интерфейс. \n",
+    "\n",
+    "//Полиморфизм реализован через методы GetInfo, Watch и Rate\n",
+    "\n",
+    "public class Movie //БАЗОВЫЙ КЛАСС\n",
     "{\n",
-    "    public string Title { get; set; }\n",
+    "    //СВОЙСВА\n",
+    "    public string Title { get; set; } \n",
     "    public string Director { get; set; }\n",
     "    public int ReleaseYear { get; set; }\n",
-    "\n",
+    "  \n",
+    "    //МЕТОДЫ, общий интерфейс\n",
+    "    //virtual позволяет методам переопределяться в производных классах\n",
     "    public virtual void GetInfo()\n",
     "    {\n",
     "        Console.WriteLine($\"Фильм: {Title}, Режиссер: {Director}, Год выпуска: {ReleaseYear}\");\n",
@@ -94,13 +123,18 @@
     "        Console.WriteLine($\"Рейтинг фильма {Title}: {rating}/10\");\n",
     "    }\n",
     "}\n",
+    "\n",
+    "     //ПРОИЗВОДНЫЕ КЛАССЫ, дочерний класс получает свойства и методы родительского класса, спецификации\n",
+    "     //В каждом из этих классов мы переопределяем один или несколько методов базового класса. \n",
+    "     //Метод override указывает, что этот метод должен заменить метод с тем же именем в родительском классе.\n",
+    "\n",
     "public class Documentary : Movie\n",
     "{\n",
     "    public string Theme { get; set; }\n",
     "\n",
-    "    public override void Watch()\n",
+    "    public override void Watch()  //в классе Documentary мы переопределяем метод Watch():\n",
     "    {\n",
-    "        base.Watch();\n",
+    "        base.Watch(); // вызываем метод базового класса\n",
     "        Console.WriteLine($\"Тема фильма: {Theme}\");\n",
     "    }\n",
     "}\n",
@@ -132,7 +166,12 @@
     "        // Вызываем методы для каждого типа фильма\n",
     "\n",
     "\n",
-    "documentary.GetInfo();\n",
+    "documentary.GetInfo(); \n",
+    "\n",
+    "//компилятор видит, что это метод базового класса Movie. \n",
+    "//Однако при выполнении программы, реальная реализация будет взята из класса Documentary.\n",
+    "// Это является ключевой особенностью полиморфизма\n",
+    "\n",
     "documentary.Watch();\n",
     "documentary.Rate(10);\n",
     "Console.WriteLine();\n",
@@ -146,7 +185,10 @@
     "\n",
     "animatedMovie.GetInfo();\n",
     "animatedMovie.Watch();\n",
-    "animatedMovie.Rate(9);"
+    "animatedMovie.Rate(9);\n",
+    "\n",
+    "//класс Movie предоставляет общую структуру,\n",
+    "//а производные классы расширяют эту структуру, переопределяя методы для более специфичной реализации."
    ]
   }
  ],
