--- a/Sprint1/Task3.ipynb
+++ b/Sprint1/Task3.ipynb
@@ -75,12 +75,20 @@
    },
    "outputs": [],
    "source": [
-    "public class Movie\n",
+    "//Полиморфизм - это способность объектов одного класса представлять объекты других классов,\n",
+    "///которые имеют общий базовый класс или интерфейс. \n",
+    "//Полиморфизм реализован через методы GetInfo, Watch и Rate\n",
+    "\n",
+    "\n",
+    "public class Movie //БАЗОВЫЙ КЛАСС\n",
     "{\n",
-    "    public string Title { get; set; }\n",
+    "    //СВОЙСВА\n",
+    "    public string Title { get; set; } \n",
     "    public string Director { get; set; }\n",
     "    public int ReleaseYear { get; set; }\n",
-    "\n",
+    "  \n",
+    "    //МЕТОДЫ, общий интерфейс\n",
+    "    //virtual позволяет методам переопределяться в производных классах\n",
     "    public virtual void GetInfo()\n",
     "    {\n",
     "        Console.WriteLine($\"Фильм: {Title}, Режиссер: {Director}, Год выпуска: {ReleaseYear}\");\n",
@@ -96,13 +104,18 @@
     "        Console.WriteLine($\"Рейтинг фильма {Title}: {rating}/10\");\n",
     "    }\n",
     "}\n",
+    "\n",
+    "     //ПРОИЗВОДНЫЕ КЛАССЫ, дочерний класс получает свойства и методы родительского класса, спецификации\n",
+    "     //В каждом из этих классов мы переопределяем один или несколько методов базового класса. \n",
+    "     //Метод override указывает, что этот метод должен заменить метод с тем же именем в родительском классе.\n",
+    "\n",
     "public class Documentary : Movie\n",
     "{\n",
     "    public string Theme { get; set; }\n",
     "\n",
-    "    public override void Watch()\n",
+    "    public override void Watch()  //в классе Documentary мы переопределяем метод Watch():\n",
     "    {\n",
-    "        base.Watch();\n",
+    "        base.Watch(); // вызываем метод базового класса\n",
     "        Console.WriteLine($\"Тема фильма: {Theme}\");\n",
     "    }\n",
     "}\n",
@@ -134,7 +147,12 @@
     "        // Вызываем методы для каждого типа фильма\n",
     "\n",
     "\n",
-    "documentary.GetInfo();\n",
+    "documentary.GetInfo(); \n",
+    "\n",
+    "//компилятор видит, что это метод базового класса Movie. \n",
+    "//Однако при выполнении программы, реальная реализация будет взята из класса Documentary.\n",
+    "// Это является ключевой особенностью полиморфизма\n",
+    "\n",
     "documentary.Watch();\n",
     "documentary.Rate(10);\n",
     "Console.WriteLine();\n",
@@ -148,7 +166,10 @@
     "\n",
     "animatedMovie.GetInfo();\n",
     "animatedMovie.Watch();\n",
-    "animatedMovie.Rate(9);"
+    "animatedMovie.Rate(9);\n",
+    "\n",
+    "//класс Movie предоставляет общую структуру,\n",
+    "//а производные классы расширяют эту структуру, переопределяя методы для более специфичной реализации."
    ]
   }
  ],
