--- a/Sprint2/Task1.ipynb
+++ b/Sprint2/Task1.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -156,8 +156,97 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Производитель: Toyota, Модель: Corolla\n",
+      "Двери: 4\n",
+      "Производитель: Ferrari, Модель: 488 Spider\n",
+      "Двери: 2\n",
+      "Автомобиль с откидным верхом: True\n",
+      "Производитель: Ducati, Модель: Panigale V4\n",
+      "Тип двигателя: V4\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    public string Make { get; set; }\n",
+    "    public string Model { get; set; }\n",
+    "\n",
+    "    public Vehicle(string make, string model)\n",
+    "    {\n",
+    "        Make = make;\n",
+    "        Model = model;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Производитель: {Make}, Модель: {Model}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public int Doors { get; set; }\n",
+    "\n",
+    "    public Car(string make, string model, int doors) : base(make, model)\n",
+    "    {\n",
+    "        Doors = doors;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Двери: {Doors}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class SportsCar : Car\n",
+    "{\n",
+    "    public bool IsConvertible { get; set; }\n",
+    "\n",
+    "    public SportsCar(string make, string model, int doors, bool isConvertible) \n",
+    "        : base(make, model, doors)\n",
+    "    {\n",
+    "        IsConvertible = isConvertible;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Автомобиль с откидным верхом: {IsConvertible}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Motorcycle : Vehicle\n",
+    "{\n",
+    "    public string EngineType { get; set; }\n",
+    "\n",
+    "    public Motorcycle(string make, string model, string engineType) : base(make, model)\n",
+    "    {\n",
+    "        EngineType = engineType;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Тип двигателя: {EngineType}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Car myCar = new Car(\"Toyota\", \"Corolla\", 4);\n",
+    "myCar.DisplayInfo();\n",
+    "\n",
+    "SportsCar mySportsCar = new SportsCar(\"Ferrari\", \"488 Spider\", 2, true);\n",
+    "mySportsCar.DisplayInfo();\n",
+    "\n",
+    "Motorcycle myMotorcycle = new Motorcycle(\"Ducati\", \"Panigale V4\", \"V4\");\n",
+    "myMotorcycle.DisplayInfo();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -181,8 +270,88 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Классификация: Кошачьи, класс: котик\n",
+      "Вашего питомца зовут: Феликс<3\n",
+      "Порода вашего котика: мейкн-кун  <3\n",
+      "Любимая игрушка Феликс - нитки  <3\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animals\n",
+    "{\n",
+    "    public string AnimalClass { get; set; }\n",
+    "\n",
+    "    public string AnimalFamily { get; set; }\n",
+    "\n",
+    "    public Animals(string animalClass, string animalFamily)\n",
+    "    {\n",
+    "        AnimalClass = animalClass;\n",
+    "        AnimalFamily = animalFamily;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Классификация: {AnimalClass}, класс: {AnimalFamily}\");\n",
+    "    }\n",
+    "}\n",
+    "public class Pet : Animals\n",
+    "{\n",
+    "    public string Name { get; set; } \n",
+    "\n",
+    "    public Pet(string animalClass, string animalFamily, string name) : base(animalClass, animalFamily)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Вашего питомца зовут: {Name}<3\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Pet\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public Cat(string animalClass, string animalFamily, string name, string breed) : base(animalClass, animalFamily, name)\n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Порода вашего котика: {Breed}  <3\");\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "public class Happy_cat : Cat\n",
+    "{\n",
+    "    public string Favorite_food { get; set; }\n",
+    "\n",
+    "    public Happy_cat(string animalClass, string animalFamily, string name, string breed, string favorite_food)  : base(animalClass, animalFamily, name, breed)\n",
+    "    {\n",
+    "        Favorite_food = favorite_food;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Любимая игрушка {Name} - {Favorite_food}  <3\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Happy_cat MyCat = new Happy_cat(\"Кошачьи\", \"котик\" , \"Феликс\", \"мейкн-кун\", \"нитки\");\n",
+    "MyCat.DisplayInfo();"
+   ]
   }
  ],
  "metadata": {
