--- a/Sprint2/Task2.ipynb
+++ b/Sprint2/Task2.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -298,8 +298,89 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Автомобиль: Производитель: Toyota, Модель: Corolla, Двери: 4\n",
+      "Мотоцикл: Производитель: Honda, Модель: CBR600RR, Тип двигателя: Inline Four\n"
+     ]
+    }
+   ],
+   "source": [
+    "//C# не поддерживает прямое множественное наследование классов\n",
+    "//Вместо этого используется механизм множественного реализации интерфейсов\n",
+    "//Класс может реализовывать несколько интерфейсов одновременно\n",
+    "//Интерфейсы могут содержать абстрактные методы и свойства\n",
+    "//Реализация интерфейсов происходит через ключевое слово : после имени класса\n",
+    "\n",
+    "//Если класс реализует определённый интерфейс, класс может об этом знать и общаться с ним через интерфейс, --->>> получив доступ только к тем методам, которые ему важны <<<-----\n",
+    "\n",
+    "//Полиморфизм: можно использовать объекты разных классов в качестве одного типа интерфейса\n",
+    "\n",
+    "//интерфейсы не могут содержать реализацию! \n",
+    "\n",
+    "\n",
+    "public interface IVehicle    //определяют общую структуру для транспортных средств\n",
+    "{\n",
+    "    string Make { get; set; }\n",
+    "    string Model { get; set; }\n",
+    "    void DisplayInfo();\n",
+    "}\n",
+    "\n",
+    "public interface IMotorized   //определяют общую структуру для транспортных средств\n",
+    "{\n",
+    "    string EngineType { get; set; }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "public class Car : IVehicle   //реализует только интерфейс IVehicle.\n",
+    "{\n",
+    "    public string Make { get; set; }\n",
+    "    public string Model { get; set; }\n",
+    "    public int Doors { get; set; }\n",
+    "\n",
+    "    public Car(string make, string model, int doors)\n",
+    "    {\n",
+    "        Make = make;\n",
+    "        Model = model;\n",
+    "        Doors = doors;\n",
+    "    }\n",
+    "\n",
+    "    public void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Автомобиль: Производитель: {Make}, Модель: {Model}, Двери: {Doors}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Motorcycle : IVehicle, IMotorized  //реализует оба интерфейса: IVehicle и IMotorized.\n",
+    "{\n",
+    "    public string Make { get; set; }\n",
+    "    public string Model { get; set; }\n",
+    "    public string EngineType { get; set; }\n",
+    "\n",
+    "    public Motorcycle(string make, string model, string engineType)\n",
+    "    {\n",
+    "        Make = make;\n",
+    "        Model = model;\n",
+    "        EngineType = engineType;\n",
+    "    }\n",
+    "\n",
+    "    public void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Мотоцикл: Производитель: {Make}, Модель: {Model}, Тип двигателя: {EngineType}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "//компилятор проверяет, что класс действительно реализует все требуемые интерфейсы\n",
+    "\n",
+    "Car myCar = new Car(\"Toyota\", \"Corolla\", 4);\n",
+    "myCar.DisplayInfo();\n",
+    "\n",
+    "Motorcycle myMotorcycle = new Motorcycle(\"Honda\", \"CBR600RR\", \"Inline Four\");\n",
+    "myMotorcycle.DisplayInfo();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -314,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -323,8 +404,111 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Собачка ТиМоШа породы - чиуауа счастлив на 100 %\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface IAnimal\n",
+    "{\n",
+    "    public string Class {get; set;}\n",
+    "    public string Name {get; set;}\n",
+    "    public void DisplayInfo();\n",
+    "}\n",
+    "\n",
+    "public interface IPet\n",
+    "{\n",
+    "    public string Breed {get; set;}\n",
+    "    public int Happy {get; set;}\n",
+    "    public void DisplayInfo();\n",
+    "\n",
+    "}\n",
+    "\n",
+    "public class Animal : IAnimal\n",
+    "{\n",
+    "    public string Class {get; set;}\n",
+    "    public string Name {get; set;}\n",
+    "\n",
+    "    public Animal(string cclass, string name)\n",
+    "    {\n",
+    "        Class = cclass;\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Создано животное {Class} - {Name}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Pet : IAnimal, IPet\n",
+    "{\n",
+    "    public string Class {get; set;}\n",
+    "    public string Name {get; set;}\n",
+    "    public string Breed {get; set;}\n",
+    "    public int Happy {get; set;}\n",
+    "    \n",
+    "    public Pet(string cclass, string name, string breed, int happy)\n",
+    "    {\n",
+    "        Class = cclass;\n",
+    "        Name = name;\n",
+    "        Breed = breed;\n",
+    "        Happy = happy;\n",
+    "    }\n",
+    "    public void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Домашний питомец {Class} - {Name} породы - {Breed} счастливо на {Happy} %\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : IAnimal, IPet\n",
+    "{\n",
+    "    public string Class {get; set;}\n",
+    "    public string Name {get; set;}\n",
+    "    public string Breed {get; set;}\n",
+    "    public int Happy {get; set;}\n",
+    "    \n",
+    "    public Cat(string cclass, string name, string breed, int happy)\n",
+    "    {\n",
+    "        Class = cclass;\n",
+    "        Name = name;\n",
+    "        Breed = breed;\n",
+    "        Happy = happy;\n",
+    "    }\n",
+    "    public void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Котик {Name} породы - {Breed} счастлив на {Happy} %\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : IAnimal, IPet\n",
+    "{\n",
+    "    public string Class {get; set;}\n",
+    "    public string Name {get; set;}\n",
+    "    public string Breed {get; set;}\n",
+    "    public int Happy {get; set;}\n",
+    "    \n",
+    "    public Dog(string cclass, string name, string breed, int happy)\n",
+    "    {\n",
+    "        Class = cclass;\n",
+    "        Name = name;\n",
+    "        Breed = breed;\n",
+    "        Happy = happy;\n",
+    "    }\n",
+    "    public void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Собачка {Name} породы - {Breed} счастлив на {Happy} %\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Dog MyDog = new Dog(\"Собака\", \"ТиМоШа\", \"чиуауа\", 100);\n",
+    "MyDog.DisplayInfo();\n"
+   ]
   }
  ],
  "metadata": {
