--- a/Sprint1/Task3.ipynb
+++ b/Sprint1/Task3.ipynb
@@ -75,15 +75,15 @@
    },
    "outputs": [],
    "source": [
-    "//Полиморфизм - это способность объектов одного класса представлять объекты других классов,\n",
-    "///которые имеют общий базовый класс или интерфейс. \n",
-    "//Полиморфизм реализован через методы GetInfo, Watch и Rate\n",
-    "\n",
+    "//Объекты взаимодействуют друг с другом через наследование и переопределение методов.\n",
+    "//Это пример использования полиморфизма в C#. Объекты разных типов могут быть использованы \n",
+    "//как объекты базового типа Movie, но при этом будут вызываться соответствующие методы \n",
+    "//их конкретных классов типо Подклассы расширяют функциональность базового класса, добавляя свои собственные методы или модифицируя существующие\n",
     "\n",
     "public class Movie //БАЗОВЫЙ КЛАСС\n",
     "{\n",
     "    //СВОЙСВА\n",
-    "    public string Title { get; set; } \n",
+    "    public string Title { get; set; } //все классы используют свойства для доступа к данным\n",
     "    public string Director { get; set; }\n",
     "    public int ReleaseYear { get; set; }\n",
     "  \n",
@@ -109,13 +109,13 @@
     "     //В каждом из этих классов мы переопределяем один или несколько методов базового класса. \n",
     "     //Метод override указывает, что этот метод должен заменить метод с тем же именем в родительском классе.\n",
     "\n",
-    "public class Documentary : Movie\n",
+    "public class Documentary : Movie //переопределение = инкапсулияция -- методы переопределяются в подклассах\n",
     "{\n",
     "    public string Theme { get; set; }\n",
     "\n",
     "    public override void Watch()  //в классе Documentary мы переопределяем метод Watch():\n",
     "    {\n",
-    "        base.Watch(); // вызываем метод базового класса\n",
+    "        base.Watch(); // вызываем метод базового класса --\n",
     "        Console.WriteLine($\"Тема фильма: {Theme}\");\n",
     "    }\n",
     "}\n",
