--- a/Sprint1/Task3.ipynb
+++ b/Sprint1/Task3.ipynb
@@ -80,7 +80,7 @@
     "//как объекты базового типа Movie, но при этом будут вызываться соответствующие методы \n",
     "//их конкретных классов типо Подклассы расширяют функциональность базового класса, добавляя свои собственные методы или модифицируя существующие\n",
     "\n",
-    "public class Movie //БАЗОВЫЙ КЛАСС\n",
+    "public class Movie //БАЗОВЫЙ КЛАССу\n",
     "{\n",
     "    //СВОЙСВА\n",
     "    public string Title { get; set; } //все классы используют свойства для доступа к данным\n",
