--- a/Sprint1/12.ipynb
+++ b/Sprint1/12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -19,11 +19,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Имя: айфон, цена: 999,99, количесвво: 100, категория: телефон\n",
-      "айфон продано 5\n",
+      "Информация о товаре: Название товара:айфон, цена товара за 1 шт:999,99, всего:100 шт., категория:телефон\n",
+      "Сколько продано товаров? товар:айфон продано:5\n",
       "Настя добавил ноутбук по цене 1500 10 штук\n",
-      "ЭПЛ located at Кристалл. Open during Магазин\n",
-      "Имя продавца Настя, сотрудник Прродавец, зарплата 50000, котакты настя@example.com\n"
+      "Инофрмация о магазине: Название магазина:ЭПЛ локация:Кристалл где хранятся:Магазин\n",
+      "Инофрмация о сотруднике: Имя продавца:Настя, сотрудник:Прродавец, зарплата:50000, котакты :настя@example.com\n"
      ]
     }
    ],
@@ -57,7 +57,7 @@
     "\n",
     "    public string GetProductInfo()\n",
     "    {\n",
-    "        return $\"Имя: {Name}, цена: {Price}, количесвво: {Quantity}, категория: {Category}\";\n",
+    "        return $\"Информация о товаре: Название товара:{Name}, цена товара за 1 шт:{Price}, всего:{Quantity} шт., категория:{Category}\";\n",
     "    }\n",
     "}\n",
     "\n",
@@ -83,12 +83,12 @@
     "\n",
     "    public void SellProduct(string productName, int quantity)\n",
     "    {\n",
-    "        Console.WriteLine($\"{productName} продано {quantity}\");\n",
+    "        Console.WriteLine($\"Сколько продано товаров? товар:{productName} продано:{quantity}\");\n",
     "    }\n",
     "\n",
     "    public string GetSellerInfo()\n",
     "    {\n",
-    "        return $\"Имя продавца {Name}, сотрудник {EmployeeId}, зарплата {Salary}, котакты {ContactInfo}\";\n",
+    "        return $\"Инофрмация о сотруднике: Имя продавца:{Name}, сотрудник:{EmployeeId}, зарплата:{Salary}, котакты :{ContactInfo}\";\n",
     "    }\n",
     "}\n",
     "\n",
@@ -119,7 +119,7 @@
     "\n",
     "    public string GetStoreInfo()\n",
     "    {\n",
-    "        return $\"{StoreName} located at {Location}. Open during {StoreHours}\";\n",
+    "        return $\"Инофрмация о магазине: Название магазина:{StoreName} локация:{Location} где хранятся:{StoreHours}\";\n",
     "    }\n",
     "}\n",
     "\n",
